[package]
name = "engine"
version = "5.1.0"
edition = "2021"
rust-version = "1.85"
resolver = "3"

[features]
default = ["dep:clap"]
tuner = ["dep:rayon", "dep:indicatif"]
release = []

[build-dependencies]
cc = "1.2.2"

[dependencies]
arrayvec = "0.7.6"
clap = { version = "4.5.21", features = ["derive"], optional = true }
colored = "3.0.0"
indicatif = { version = "0.18.0", optional = true }
nom = "8.0.0"
rand = "0.9.2"
rayon = { version = "1.8.1", optional = true }

[dev-dependencies]
paste = "1.0.15"

[lints.rust]
static_mut_refs = "allow"

future_incompatible = { level = "warn", priority = -1 }
let_underscore = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

wildcard_imports = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
option_if_let_else = "allow"
module_name_repetitions = "allow"
inline_always = "allow"
missing_const_for_fn = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
cognitive_complexity = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
type_complexity = "allow"
let_and_return = "allow"
significant_drop_tightening = "allow"
enum_glob_use = "allow"
large_stack_arrays = "allow"

allow_attributes = "warn"
allow_attributes_without_reason = "warn"

[profile.release]
# debug = 1
panic = "abort"
codegen-units = 1
lto = true
