[workspace]
resolver = "3"
members = ["engine", "tools/tuner"]

[workspace.package]
version = "5.1.0"
edition = "2024"
rust-version = "1.85"

[workspace.lints.rust]
static_mut_refs = "allow"

future_incompatible = { level = "warn", priority = -1 }
let_underscore = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

wildcard_imports = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
option_if_let_else = "allow"
module_name_repetitions = "allow"
inline_always = "allow"
missing_const_for_fn = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
cognitive_complexity = "allow"
must_use_candidate = "allow"
return_self_not_must_use = "allow"
type_complexity = "allow"
let_and_return = "allow"
significant_drop_tightening = "allow"
enum_glob_use = "allow"
large_stack_arrays = "allow"
new_without_default = "allow"

allow_attributes = "warn"
allow_attributes_without_reason = "warn"

[profile.release]
# debug = 1
panic = "abort"
codegen-units = 1
lto = true
