[package]
name = "engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[features]
tuner = []
release = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "engine"
path = "src/main.rs"

[build-dependencies]
cc = "1.2.2"

[dependencies]
arrayvec = "0.7.6"
colored = "3.0.0"
nom = "8.0.0"
rand = "0.9.2"

[dev-dependencies]
paste = "1.0.15"

[lints]
workspace = true
