[package]
name = "engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
default-run = "engine"

[features]
release = []

[lib]
path = "src/lib.rs"

[[bin]]
name = "engine"
path = "src/main.rs"

[build-dependencies]
cc = "1.2.2"

[dependencies]
arrayvec = "0.7.6"

[dev-dependencies]
paste = "1.0.15"

[lints]
workspace = true
