[package]
name = "datagen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "datagen"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
engine = { path = "../../engine", version = "*" }
indicatif = { version = "0.18.0" }
rayon = { version = "1.8.1" }
ctrlc = "3.4.7"
jiff = "0.2.15"
rand = "0.9.2"

[lints]
workspace = true
