[package]
name = "tuner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "tuner"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
engine = { path = "../../engine", version = "*", features = ["tuner"] }
indicatif = { version = "0.18.0" }
rayon = { version = "1.8.1" }

[lints]
workspace = true
